# RubinLSSTOpsimAna

./: .pre-commit-config.yaml  README.md  pyproject.toml
benchmarks/: asv.conf.json  benchmarks.py
docs/: conf.py  index.rst
notebooks/01_ExploreSims/: 01_ExampleReadOpsimDb.ipynb  03_OpsimStat.ipynb
tests/rubinlsstopsimana/: test_example_module.py  test_packaging.py
