
[project]
authors = [
  {name = "Sylvie Dagoret-Campagne", email = "sylvie.dagoret-campagne@ijclab.in2p3.fr"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
]
dependencies = [
  "numpy",
  "matplotlib",
  "seaborn",
  "scipy",
  "scikit-learn",
  "healpy",
  "astropy",
  "pandas",
  "rubin-sim",
  "sncosmo",
]
description = "Analyse opsim v5.3"
dynamic = ["version"]
license = "MIT"
license-files = ["LICENSE"]
name = "rubinlsstopsimana"
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
"Source Code" = "https://github.com/LSSTDESC/rubinlsstopsimana"

# On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
[project.optional-dependencies]
dev = [
  "asv[virtualenv]==0.6.5", # Used to compute performance benchmarks
  "jupyter", # Clears output from Jupyter notebooks
  "pre-commit", # Used to run checks before finalizing a git commit
  "pytest",
  "pytest-cov", # Used to report total code coverage
  "ruff", # Used for static linting of files
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=62", # Used to build and package the Python project
  "setuptools_scm>=6.2", # Gets release version from git. Makes it available programmatically
]

[tool.setuptools_scm]
write_to = "src/rubinlsstopsimana/_version.py"

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob=*.rst"
testpaths = [
  "tests",
  "src",
  "docs",
]

[tool.ruff]
line-length = 110
[tool.ruff.lint]
ignore = [
  "UP006", # Allow non standard library generics in type hints
  "UP007", # Allow Union in type hints
  "SIM114", # Allow if with same arms
  "B028", # Allow default warning level
  "SIM117", # Allow nested with
  "UP015", # Allow redundant open parameters
  "UP028", # Allow yield in for loop
]
select = [
  # pycodestyle
  "E",
  "W", # Pyflakes
  "F", # pep8-naming
  "N", # pyupgrade
  "UP", # flake8-bugbear
  "B", # flake8-simplify
  "SIM", # isort
  "I", # docstrings
  "D101",
  "D102",
  "D103",
  "D106",
  "D206",
  "D207",
  "D208",
  "D300",
  "D417",
  "D419", # Numpy v2.0 compatibility
  "NPY201",
]

[tool.coverage.run]
omit = ["src/rubinlsstopsimana/_version.py"]
